# hcm-discord-invite-tracker

./: .dockerignore  .env.hcm.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SOURCE_MANIFEST.txt  compose.hcm.yml  pyproject.toml
.github/workflows/: ci.yml
config/: hcm-sources.yml
scripts/: check-hcm.sh  install-hcm.sh
src/hcm_invite_tracker/: __init__.py  bot.py  catalog.py  commands.py  config.py  dashboard.py  database.py  discord_helpers.py  main.py  matching.py  website.py
tests/: test_catalog.py  test_database.py  test_matching.py
website/: README.md  hcm-website.patch  join-redirect-data-snippet.liquid
