[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hcm-discord-invite-tracker"
version = "0.2.0"
description = "Hampden County Mesh's self-hosted Discord invite source tracker"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hampden County Mesh"}]
dependencies = [
  "aiohttp>=3.10,<4",
  "discord.py>=2.7.1,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "ruff>=0.9,<1",
]

[project.scripts]
hcm-invite-tracker = "hcm_invite_tracker.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
